--- a/examples/lora_single_gpu/llama3_lora_sft.yaml
+++ b/examples/lora_single_gpu/llama3_lora_sft.yaml
@@ -1,5 +1,7 @@
 # model
-model_name_or_path: meta-llama/Meta-Llama-3-8B-Instruct
+# model_name_or_path: meta-llama/Meta-Llama-3-8B-Instruct
+model_name_or_path: unsloth/llama3-8b-bnb-4bit
+quantization_bit: 4
 
 # method
 stage: sft
@@ -8,7 +10,7 @@ finetuning_type: lora
 lora_target: q_proj,v_proj
 
 # dataset
-dataset: identity,alpaca_gpt4_en
+dataset: identity_cgm
 template: llama3
 cutoff_len: 1024
 max_samples: 1000
@@ -16,7 +18,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 # output
-output_dir: saves/llama3-8b/lora/sft
+output_dir: output/identity_cgm_lora
 logging_steps: 10
 save_steps: 500
 plot_loss: true
@@ -26,7 +28,7 @@ overwrite_output_dir: true
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 8
 learning_rate: 0.0001
-num_train_epochs: 3.0
+num_train_epochs: 15
 lr_scheduler_type: cosine
 warmup_steps: 0.1
 fp16: true
